@@ -1,5 +1,5 @@
 # Tests of overloaded operators resolution.
-# Copyright 1998, 1999, 2002, 2004 Free Software Foundation, Inc.
+# Copyright 1998, 1999, 2002, 2004, 2005 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
