@@ -1,4 +1,4 @@
-#   Copyright 1998 Free Software Foundation, Inc.
+#   Copyright 1998, 2002, 2005 Free Software Foundation, Inc.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
